<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:ignore="ContentDescription">

    <ScrollView
        android:id="@+id/shortcuts_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_weight="1"
        android:background="@drawable/background_card"
        android:padding="@dimen/_2sdp"
        android:fillViewport="true"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_12sdp">

            <TextView
                android:id="@+id/title_textview"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/version_manager_shortcuts"
                android:textColor="@color/primary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.movtery.zalithlauncher.ui.view.AnimButton
                android:id="@+id/shortcuts_mods"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:text="@string/version_manager_shortcuts_mods"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:backgroundTint="#FF69B4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_textview" />

            <com.movtery.zalithlauncher.ui.view.AnimButton
                android:id="@+id/game_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:text="@string/version_manager_shortcuts_version_path"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:backgroundTint="#FF8C00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shortcuts_mods" />

            <com.movtery.zalithlauncher.ui.view.AnimButton
                android:id="@+id/resource_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:text="@string/version_manager_shortcuts_resource_path"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:backgroundTint="#4CAF50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_path" />

            <com.movtery.zalithlauncher.ui.view.AnimButton
                android:id="@+id/shader_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:text="@string/version_manager_shortcuts_shader_path"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:backgroundTint="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resource_path" />
            
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/edit_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:layout_weight="1"
        android:background="@drawable/background_card"
        android:padding="@dimen/_2sdp"
        android:fillViewport="true"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_12sdp">

            <TextView
                android:id="@+id/title_manage_textview"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/version_manager_title"
                android:textColor="@color/primary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.movtery.zalithlauncher.ui.view.AnimButton
                android:id="@+id/version_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:text="@string/setting_category_version"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:backgroundTint="#FFD700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_manage_textview" />

            <com.movtery.zalithlauncher.ui.view.AnimButton
                android:id="@+id/version_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:text="@string/version_manager_delete"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:backgroundTint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/version_settings" />
            
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>
